force-app/main/default/objects/AuditTrailWatcherRule__c/AuditTrailWatcherRule__c.object-meta.xml
<CustomObject>
    <description>Rules for monitoring specific actions in the Setup Audit Trail</description>
    <label>Audit Trail Watcher Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Trail Watcher Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>