force-app/main/default/objects/AuditTrailWatcherRule__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The Setup Audit Trail action to monitor (e.g., changedApexClass, suOrgAdminLogin, PermSetAssign, etc.). When no conditions are set, the rule triggers on any audit record with this action.</description>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>