force-app/main/default/objects/AuditTrailWatcherRule__c/fields/CustomLogic__c.field-meta.xml
<CustomField>
    <fullName>CustomLogic__c</fullName>
    <description>Custom formula to combine condition results. Use condition numbers (1, 2, 3) with AND and OR. Example: (1 OR 2) AND 3</description>
    <label>Custom Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>