force-app/main/default/objects/AuditTrailWatcherRule__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <description>Display value from the Setup Audit Trail record, used for condition evaluation.</description>
    <label>Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>