force-app/main/default/objects/AuditTrailWatcherRule__c/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <description>Comma-separated list of public group or queue developer names that will receive
		notifications</description>
    <inlineHelpText>Enter the developer names of public groups or queues that should receive
		notifications, separated by commas. Example: AdminGroup,SupportQueue</inlineHelpText>
    <label>Group Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>