force-app/main/default/objects/AuditTrailWatcherRule__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the rule is active and should be evaluated by the batch process.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>