force-app/main/default/objects/AuditTrailWatcherRule__c/fields/LogicType__c.field-meta.xml
<CustomField>
    <fullName>LogicType__c</fullName>
    <description>How to combine condition results: AND (all must match), OR (any must match), or Custom (use formula in Custom Logic field).</description>
    <label>Logic Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>