force-app/main/default/objects/AuditTrailWatcherRule__c/fields/NotificationRecipient__c.field-meta.xml
<CustomField>
    <fullName>NotificationRecipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who will receive notifications when the rule is triggered.</description>
    <label>Notification Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Audit Trail Watcher Rules</relationshipLabel>
    <relationshipName>Audit_Trail_Watcher_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>