force-app/main/default/objects/AuditTrailWatcherRule__c/fields/SendPlatformEvent__c.field-meta.xml
<CustomField>
    <fullName>SendPlatformEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, a platform event will be published when this rule is triggered</description>
    <inlineHelpText>Enable this to publish a platform event when this rule is triggered</inlineHelpText>
    <label>Send Platform Event</label>
    <type>Checkbox</type>
</CustomField>