force-app/main/default/objects/AuditTrailWatcherRule__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <defaultValue>&quot;Warning&quot;</defaultValue>
    <description>Defines the type of the alert, used in the email template.</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
                <default>true</default>
                <label>Info</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>