force-app/main/default/objects/AuditTrailWatcherRule__c/fields/TrackActivity__c.field-meta.xml
<CustomField>
    <fullName>TrackActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, creates an Event in the Activity section each time an alert email is sent for this rule.</description>
    <label>Track Activity</label>
    <type>Checkbox</type>
</CustomField>