force-app/main/default/objects/AuditTrailWatcherRule__c/validationRules/RequireCustomLogicForCustomType.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireCustomLogicForCustomType</fullName>
    <active>true</active>
    <description>When Logic Type is Custom, Custom Logic must be specified.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(LogicType__c, &quot;Custom&quot;),
    ISBLANK(CustomLogic__c)
)</errorConditionFormula>
    <errorDisplayField>CustomLogic__c</errorDisplayField>
    <errorMessage>Custom Logic is required when Logic Type is Custom.</errorMessage>
</ValidationRule>